# Consensia

./: .dockerignore  .gitignore  Makefile  PROJECT_OVERVIEW.md  README.md  docker-compose.yaml  docker-compose.yml  netlify.toml
DS/: 1_export_repo.py  2_summary_patches_only_mongo_only_results.py  3_export_all_labels.py  4_export_lvl1_labels.py  5_export_repo_lvl1_inline.py  (+1 more)
backend/: .env  Dockerfile  README.md  alembic.ini  env.template  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 03cf4b65fa66_create_auth_tables.py  0bdaaaa02a2e_.py  2c4a6f1b9d2e_add_debate_messages.py  6d1f2f6e9c01_add_session_summary.py  7b573d8c10b7_.py  8868e829e3fd_rename_verification_tokens_to_codes.py  a8f0bafdffbe_.py  b7e3a1c40f0a_add_admin_and_debate_quota.py  c9d8e7f6a5b4_add_favorite_personas.py  d9e8f7a6b5c4_add_debate_message_attachments.py  e8f9a0b1c2d3_add_password_reset_codes.py  ea83cacc7ef9_.py  f1a2b3c4d5e6_add_debate_sessions.py
backend/app/: __init__.py  config.py  db.py  debate_quota.py  main.py  models.py  schemas.py
backend/app/admin/: router.py  schemas.py
backend/app/auth/: deps.py  emailer.py  google_auth.py  repository.py  router.py  schemas.py  security.py
backend/app/bundled_raw_authors/: Fac_e58AAAAJ_raw.json
backend/app/persona_favorites/: router.py
backend/app/services/: __init__.py  llm.py  persona_pipeline.py  scraping_service.py
backend/app/sessions/: router.py
backend/consensia_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/data/raw_authors/: VlSBMuIAAAAJ_raw.json  WH-L4NoAAAAJ_raw.json
(+177 files in other folders)
